# git-fwdd

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
cmd/git-fwdd/: main.go
internal/queuesys/: queuesys.go
