[package]
name = "git-fwdd"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "git_fwdd"

[lib]
name = "git_fwdd"
path = "src/lib.rs"

[dependencies]
